# tauri-studio

./: .gitignore  Makefile  README.md  config.mk  package.json
.github/workflows/: build.yml
src-app/: .eslintrc  index.html  next-env.d.ts  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
src-app/assets/: main.css
src-app/components/: index.ts
src-app/components/Editor/: Editor.tsx
src-app/components/Editors/: Editors.tsx  index.ts
src-app/components/Header/: Header.tsx
src-app/components/SetupFeed/: SetupFeed.tsx
src-app/components/Sidebar/: Sidebar.tsx
src-app/components/Tabs/: Tabs.tsx
src-app/components/Terminal/: Terminal.tsx  index.ts
src-app/components/Treeview/: Treeview.tsx  index.ts
src-app/lib/: context.tsx  project.ts  settings.ts  setup.ts  types.ts
src-app/pages/: _app.tsx  _document.tsx  editors.tsx  index.tsx
src-app/src/: App.tsx  main.tsx  tauri.d.ts
src-app/src/components/: index.ts
src-app/src/components/Editor/: Core.tsx  Editor.tsx  monaco.ts
src-app/src/components/Editors/: Editors.tsx
src-app/src/components/Header/: Header.tsx
src-app/src/components/SetupFeed/: SetupFeed.tsx  index.ts
src-app/src/components/Terminal/: Terminal.tsx
src-app/src/lib/: context.tsx  project.ts  settings.ts  setup.ts  types.ts
src-app/src/pages/: Editors.tsx  Init.tsx  index.ts
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/src/: cmd.rs  main.rs  utils.rs
static/src-tauri/: Cargo.toml  tauri.conf.json
