[package]
name = "helloworld"
version = "0.1.0"
description = "A very simple Tauri Appplication"
edition = "2018"

[build-dependencies]
tauri-build = { git = "https://github.com/tauri-apps/tauri.git", branch="dev", features = [ "codegen" ]}

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = [ "derive" ] }
tauri = { git = "https://github.com/tauri-apps/tauri.git", branch="dev", features =["api-all"]}

[profile.release.package.wry]
debug = true
debug-assertions = true

[features]
default = [ "custom-protocol" ]
custom-protocol = [ "tauri/custom-protocol" ]
